fix ssr flicker before js loads

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -18,7 +18,7 @@ footer {
   ul {
     margin: 0;
     li {
-      margin: 3% 1.25em;
+      margin: 4% 1.25em;
       a {
         font-size: 1.5em;
       }
