--- a/src/components/WorkItem/WorkItem.module.scss
+++ b/src/components/WorkItem/WorkItem.module.scss
@@ -14,6 +14,7 @@
 
   .item {
     margin: 1em;
+    width: 100%;
 
     .itemHeader {
       display: flex;
